--- a/app/scss/adaptive.scss
+++ b/app/scss/adaptive.scss
@@ -1,14 +1,124 @@
-@media (max-width: 768px) {
+@media (max-width: 1500px) {
+    .header__slider {
+        .slick-prev {
+            left: 50px;
+        }
 
-    header {
-
-        .navigation__logo-mobile{
-            display: block;
-            position: absolute;
-            top: 15px;
-            left: 10px;
+        .slick-next {
+            right: 50px;
         }
     }
+
+    .worker {
+        .worker__slider {
+            .slick-prev {
+                left: 50px;
+            }
+    
+            .slick-next {
+                right: 50px;
+            }
+        }
+    }
+
+    .section {
+        .section__inner {
+            padding-right: 20px;
+        }
+    }
+
+    footer {
+        .footer__menu {
+            padding-right: 20px;
+        }
+    }
+    
+    
+    
+}
+
+@media (max-width: 1199px) {
+
+    .header__slider {
+        .slick-prev {
+            left: 25px;
+        }
+
+        .slick-next {
+            right: 25px;
+        }
+    }
+
+    .worker {
+        .worker__slider {
+            .slick-prev {
+                left: 25px;
+            }
+    
+            .slick-next {
+                right: 25px;
+            }
+        }
+    }
+
+    .prising {
+        .prising__inner {
+            flex-wrap:wrap;
+    
+            .prising__section {
+                max-width: 40%;
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+        }
+    }
+
+
+    .laptop {
+        .laptop__img {
+            img {
+                object-fit: contain;
+            }
+        }
+    }
+
+    
+}
+
+@media (max-width: 997px) {
+
+    .about {
+        padding-bottom: 70px;
+
+        .about__holder {
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 50px;
+            margin-bottom: 50px;
+
+            .about__section {
+                width: 40%;
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+
+    .camera {
+        .camera__img {
+            display: none;
+        }
+    }
+
+    .laptop {
+        .laptop__img {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
 
     $navigation-width: 200px;
 
@@ -83,12 +193,168 @@
     
     }
 
-    
+    header {
 
+        .navigation__logo-mobile{
+            display: block;
+            position: absolute;
+            top: 15px;
+            left: 10px;
+        }
 
-    .test__content{
-        padding-top: 60px;
+        .header__slider {
+            .slick-list {
+                .slick-track {
+                    .header__slider-section {
+
+                        h1,h2 {
+                            font-size: 50px;
+            
+                        }
+                    }
+                }
+            }
+        }
+
+        
     }
+
+    .about {
+
+        .about__title {
+            font-size: 50px;
+        }
+
+        .about__subtitle {
+            padding-left: 20px;
+            padding-right: 20px;
+            text-align: center;
+        }
+
+        .about__holder {
+            .about__section {
+                margin-top: 75px;
+                width: 100%;
+
+                h3 {
+                    margin-top: 37px;
+                    margin-bottom: 15px;
+                }
+            }
+        }
+    }
+
+    .camera {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+
+    .laptop {
+        padding-top: 80px;
+        padding-bottom: 80px;
+
+        h2 {
+            font-size: 50px;
+            text-align: center;
+        }
+    }
+
+    .section {
+        padding-top: 80px;
+        padding-bottom: 80px;
+
+        h2 {
+            font-size: 50px;
+
+        }
+
+        .section__subtitle {
+            padding-left: 20px;
+            padding-right: 20px;
+            text-align: center;
+        }
+
+        .section__inner {
+            .section__content {
+                h3 {
+                    font-size: 50px;
+                }
+            }
+        }
+    }
+
+    .worker__section {
+        text-align: center;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+
+    .team__subtitle {
+        padding-left: 20px;
+        padding-right: 20px;
+        text-align: center;
+    }
+
+    .prising {
+        .prising__subtitle {
+            padding-left: 20px;
+            padding-right: 20px;
+            text-align: center;
+        }
+
+        .prising__inner {
+            .prising__section {
+                max-width: 80%;
+            }
+        }
+    }
+
+    .agents {
+        background-image: none;
+        .agents__inner {
+            width: 80%;
+            display: flex;
+            justify-content: center;
+
+            .agents__info {
+                width: 100%;
+                p {
+                    width: 100%;
+                    padding-left: 10px;
+                    padding-right: 10px;
+                }
+            }
+        }
+    }
+
+    .master {
+        text-align: center;
+        padding-left: 20px;
+        padding-right: 20px;
+
+        h2 {
+            font-size: 50px;
+        }
+    }
+
+    footer {
+        h4 {
+            text-align: center;
+        }
+
+        .footer__menu {
+            
+            li {
+                padding-left: 10px;
+            }
+        }
+    }
+
+    
+}
+
+@media (max-width: 575px) {
 
 }
 
