--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -23,8 +23,9 @@ body {
   padding-right: 10px; }
 
 header {
-  padding-top: 300px;
-  height: 1068px;
+  padding-top: 28vh;
+  height: 100vh;
+  min-height: 730px;
   color: #fff;
   background-image: url("./../img/header-background.png");
   background-repeat: no-repeat;
@@ -255,7 +256,8 @@ header {
       font-family: "Raleway";
       font-weight: 100;
       font-size: 60px;
-      margin: 0px; }
+      margin: 0px;
+      text-align: center; }
     .header__slider .header__slider-section span {
       font-family: "Proxima-Nova";
       font-weight: 300;
@@ -629,6 +631,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 1400px;
     margin-top: 130px; }
     .section .section__inner .section__content {
       max-width: 700px;
@@ -696,7 +699,8 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 110px; }
+    margin-top: 110px;
+    max-width: 2000px; }
     .team .team__list .team__section {
       max-width: 400px;
       width: 20%;
@@ -747,6 +751,7 @@ header {
       margin-left: 15px;
       margin-right: 15px;
       padding-top: 40px;
+      padding-bottom: 100px;
       min-height: 585px;
       background-color: #fff;
       position: relative; }
