--- a/app/scss/desk.scss
+++ b/app/scss/desk.scss
@@ -27,8 +27,9 @@ body {
 
 
 header {
-    padding-top: 300px;
-    height: 1068px;
+    padding-top: 28vh;
+    height: 100vh;
+    min-height: 730px;
     color: #fff;
     background-image: url("./../img/header-background.png");
     background-repeat: no-repeat;
@@ -329,6 +330,7 @@ header {
             font-weight: 100;
             font-size: 60px;
             margin: 0px;
+            text-align: center;
         }
 
         span {
@@ -824,6 +826,7 @@ header {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        max-width: 1400px;
         margin-top: 130px;
 
         .section__content{
@@ -913,6 +916,7 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         margin-top: 110px;
+        max-width: 2000px;
 
         .team__section{
             max-width: 400px;
@@ -979,6 +983,7 @@ header {
             margin-left: 15px;
             margin-right: 15px;
             padding-top: 40px;
+            padding-bottom: 100px;
             min-height: 585px;
             background-color: #fff;
             position: relative;
