--- a/app/scss/desk.scss
+++ b/app/scss/desk.scss
@@ -147,7 +147,7 @@ header {
         height: 2px;
         background-color: rgb(255, 255, 255);
         transition-duration: 300ms;
-        border: 1px solid black;
+        border: 1px solid #87949e;
     }
 
     &::after{
@@ -159,7 +159,7 @@ header {
         height: 2px;
         background-color: rgb(255, 255, 255);
         transition-duration: 300ms;
-        border: 1px solid black;
+        border: 1px solid #87949e;
     }
     
     span {
@@ -167,7 +167,7 @@ header {
         width: 40px;
         height: 4px;
         background-color: rgb(255, 255, 255);
-        border: 1px solid black;
+        border: 1px solid #87949e;
     }
 }
 
