--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -97,6 +97,8 @@ header {
         font-weight: 700;
         font-size: 14px;
         text-transform: uppercase; }
+        .navigation .navigation__menu .navigation__item a:hover {
+          opacity: 0.8; }
 
 .navigation__toggle {
   display: none;
@@ -224,6 +226,8 @@ header {
       right: 0px; }
   .header__slider .slick-arrow {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+    .header__slider .slick-arrow:hover {
+      opacity: 0.5; }
   .header__slider .slick-dots {
     display: flex;
     justify-content: center;
@@ -279,6 +283,8 @@ header {
       outline: none;
       color: #fff;
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+      .header__slider .header__slider-section a:hover {
+        opacity: 0.8; }
 
 .about {
   padding-top: 110px;
@@ -323,6 +329,8 @@ header {
     font-size: 14px;
     color: #fff;
     text-decoration: none; }
+    .about .about__more:hover {
+      opacity: 0.8; }
 
 .about__holder {
   display: flex;
@@ -408,6 +416,8 @@ header {
       font-size: 14px;
       color: #fff;
       text-decoration: none; }
+      .camera .camera__content .camera__more:hover {
+        opacity: 0.8; }
 
 .laptop {
   display: flex;
@@ -448,6 +458,8 @@ header {
       font-size: 14px;
       color: #fff;
       text-decoration: none; }
+      .laptop .laptop__content .laptop__more:hover {
+        opacity: 0.8; }
   .laptop .laptop__img {
     width: 50%;
     max-width: 740px;
@@ -571,6 +583,8 @@ header {
         right: 0px; }
     .worker .worker__slider .slick-arrow {
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+      .worker .worker__slider .slick-arrow:hover {
+        opacity: 0.5; }
     .worker .worker__slider .slick-dots {
       display: flex;
       justify-content: center;
@@ -806,7 +820,11 @@ header {
         font-size: 18px;
         letter-spacing: 7px;
         display: flex;
-        align-items: center; }
+        align-items: center;
+        outline: none;
+        cursor: pointer; }
+        .prising .prising__inner .prising__section button:hover {
+          opacity: 0.8; }
 
 .agents {
   box-sizing: content-box;
@@ -850,6 +868,8 @@ header {
       text-decoration: none;
       outline: none;
       border: none; }
+      .agents .agents__info a:hover {
+        opacity: 0.8; }
 
 .master {
   display: flex;
@@ -885,6 +905,8 @@ header {
     text-decoration: none;
     outline: none;
     border: none; }
+    .master a:hover {
+      opacity: 0.8; }
 
 footer {
   height: 170px;
@@ -926,5 +948,7 @@ footer {
       footer .footer__menu li a {
         color: #87949e;
         text-decoration: none; }
+        footer .footer__menu li a:hover {
+          opacity: 1; }
     footer .footer__menu .footer__menu-active {
       opacity: 1; }
